chore: Upgrade to Flow 24 (#115)
* chore: Upgrade to Flow 24

Upgrade required changes to the backend artifact to align with Jakarta EE
specifications.
Removed driver downloader maven plugin in favor of using Webdriver Manager.
Added Burningwave dependency to programmatically open Java modules to each
others, to allow memory size computation using reflection without manually
adding '--add-opens' flag for every package.

Fixes #114

* Applied review suggestions